; ModuleID = '/home/carl/AnghaBench/radare2/libr/cons/extr_dietline.c_rotate_kill_ring.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/cons/extr_dietline.c_rotate_kill_ring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, %struct.TYPE_5__*, i32, %struct.TYPE_4__ }
%struct.TYPE_5__ = type { i64 }
%struct.TYPE_4__ = type { i64, i64* }

@enable_yank_pop = common dso_local global i64 0, align 8
@I = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @rotate_kill_ring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rotate_kill_ring() #0 {
  %1 = load i64, i64* @enable_yank_pop, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %27

3:                                                ; preds = %0
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 1), align 8
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 0), align 8
  %6 = call i32 @r_list_get_n(%struct.TYPE_5__* %4, i64 %5)
  %7 = call i64 @strlen(i32 %6)
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 3, i32 0), align 8
  %9 = sub i64 %8, %7
  store i64 %9, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 3, i32 0), align 8
  %10 = load i64*, i64** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 3, i32 1), align 8
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 3, i32 0), align 8
  %12 = getelementptr inbounds i64, i64* %10, i64 %11
  store i64 0, i64* %12, align 8
  %13 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 0), align 8
  %14 = sub nsw i64 %13, 1
  store i64 %14, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 0), align 8
  %15 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 0), align 8
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %3
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 1), align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = sub nsw i64 %20, 1
  store i64 %21, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 0), align 8
  br label %22

22:                                               ; preds = %17, %3
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 1), align 8
  %24 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 0), align 8
  %25 = call i32 @r_list_get_n(%struct.TYPE_5__* %23, i64 %24)
  store i32 %25, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @I, i32 0, i32 2), align 8
  %26 = call i32 (...) @paste()
  br label %27

27:                                               ; preds = %22, %0
  ret void
}

declare dso_local i64 @strlen(i32) #1

declare dso_local i32 @r_list_get_n(%struct.TYPE_5__*, i64) #1

declare dso_local i32 @paste(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
